--- a/app/static/index.html
+++ b/app/static/index.html
@@ -12,28 +12,6 @@
     <link rel="stylesheet" href="lib/ng-tags-input/ng-tags-input.bootstrap.css">
 </head>
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Todolist</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav">
-
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-</nav>
 <div class="container" ng-view></div>
 <script src="lib/jquery/dist/jquery.js"></script>
 <script src="lib/jquery-ui/jquery-ui.js"></script>
@@ -46,6 +24,10 @@
 <script src="lib/ng-tags-input/ng-tags-input.min.js"></script>
 
 <script src="js/app.js"></script>
+<script src="js/home/directives.js"></script>
+<script src="js/home/filters.js"></script>
+<script src="js/home/TagService.js"></script>
+<script src="js/home/TodoListService.js"></script>
 <script src="js/home/TodoItem.js"></script>
 <script src="js/home/home-controller.js"></script>
 
