Continue refactor to allow for resources

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -24,6 +24,7 @@
 <script src="lib/ng-tags-input/ng-tags-input.min.js"></script>
 
 <script src="js/app.js"></script>
+<script src="js/home/resources.js"></script>
 <script src="js/home/directives.js"></script>
 <script src="js/home/filters.js"></script>
 <script src="js/home/TagService.js"></script>
