--- a/app/static/index.html
+++ b/app/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todolist</title>
+    <title>Doit</title>
     <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="lib/jquery-ui/themes/smoothness/jquery-ui.css" rel="stylesheet"/>
     <link href="css/app.css" rel="stylesheet">
