Started todo page

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -28,13 +28,14 @@
 <script src="lib/ng-tags-input/ng-tags-input.min.js"></script>
 
 <script src="js/app.js"></script>
-<script src="js/home/resources.js"></script>
-<script src="js/home/directives.js"></script>
-<script src="js/home/filters.js"></script>
+<script src="js/resources.js"></script>
+<script src="js/directives.js"></script>
+<script src="js/filters.js"></script>
 <script src="js/home/TagService.js"></script>
 <script src="js/home/TodoListService.js"></script>
 <script src="js/home/TodoItem.js"></script>
 <script src="js/home/home-controller.js"></script>
+<script src="js/todo/todo-controller.js"></script>
 <script src="js/stats/stats-controller.js"></script>
 
 </body>
