--- a/app/static/index.html
+++ b/app/static/index.html
@@ -21,9 +21,12 @@
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-animate/angular-animate.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
+<script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <script src="lib/angular-route/angular-route.js"></script>
 <script src="lib/angular-timer/dist/angular-timer.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="lib/showdown/src/showdown.js"></script>
+<script src="lib/angular-markdown-directive/markdown.js"></script>
 <script src="lib/angular-ui-date/src/date.js"></script>
 <script src="lib/ng-tags-input/ng-tags-input.min.js"></script>
 
